static/css/home.css
.home {}


.google-home__colors {
    display: block;
    position: relative;
    text-align: center;
}
.google-home__color {
    padding: 0;
}
    .google-home__color--circle {
        display: block;
        width: 0.25rem;
        height: 0.25rem;
        margin: 0 auto;
        border-radius: 50%;
    }
    .google-home__color--line {
        display: inline-block;
        margin: 0 0.2rem;
        width: 0.6rem;
        height: 0.25rem;
        border-radius: 0.25rem;
    }
    .google-home__color--blue {
        background-color: #98DBFF;
    }
    .google-home__color--purple {
        background-color: #CBA5FF;
    }
    .google-home__color--green {
        background-color: #1EFF7A;
    }
    .google-home__color--pink {
        background-color: #FFDADA;
    }

.window {
    display: block;
    position: relative;
    margin: 7.0rem auto;
    max-width: 385px;
    min-width: 256px;
    width: 100%;
    overflow: hidden;
}
    @media (max-height: 45em) {
        .window {
            margin: 2.0rem auto;
        }
    }
    .window__label {
        display: block;
        position: relative;
        padding: 0;
        margin: 1rem;
        text-align: center;
        max-width: 100%;
    }
        .window__label__text {
            display: inline-block;
            margin: 0;
            padding: 0.5em 2.0em;
            background-color: #F2F2F2;
            border-radius: 36px;
            font-size: 1.4em;
            font-weight: 300;
            line-height: 1.5em;
            text-align: center;
        }
        .window__label__colors {
            display: block;
            position: relative;
            width: 100%;
            margin: 0.8em 0;
        }
            .window__label__colors .google-home__color {
                display: block;
                position: absolute;
                top: 0rem;
                left: calc(50% - 0.3rem);
                opacity: 0;
                -webkit-animation-delay: 500ms;
                        animation-delay: 500ms;
                -webkit-animation-duration: 600ms;
                        animation-duration: 600ms;
                -webkit-animation-fill-mode: forwards;
                        animation-fill-mode: forwards;
                -webkit-animation-iteration-count: 1;
                        animation-iteration-count: 1;
                -webkit-animation-timing-function: linear;
                        animation-timing-function: linear;
            }
                .window__label__colors .google-home__color.google-home__color--blue {
                    -webkit-animation-name: animation-label-color--blue;
                            animation-name: animation-label-color--blue;
                }
                .window__label__colors .google-home__color.google-home__color--purple {
                    -webkit-animation-name: animation-label-color--purple;
                            animation-name: animation-label-color--purple;
                }
                .window__label__colors .google-home__color.google-home__color--green {
                    -webkit-animation-name: animation-label-color--green;
                            animation-name: animation-label-color--green;
                }
                .window__label__colors .google-home__color.google-home__color--pink {
                    -webkit-animation-name: animation-label-color--pink;
                            animation-name: animation-label-color--pink;
                }
            @keyframes animation-label-color--blue {
                50% {
                    left: calc((50% - 1.65rem) - 0.45rem);
                    width: 1.2rem;
                    opacity: 1;
                }
                100% {
                    left: calc(50% - 1.65rem);
                    opacity: 1;
                    width: 0.6rem;
                }
            }
            @keyframes animation-label-color--purple {
                50% {
                    left: calc((50% - 0.75rem) - 0.15rem);
                    width: 0.9rem;
                    opacity: 1;
                }
                100% {
                    left: calc(50% - 0.75rem);
                    opacity: 1;
                    width: 0.6rem;
                }
            }
            @keyframes animation-label-color--green {
                50% {
                    left: calc((50% + 0.15rem) + 0.15rem);
                    width: 0.9rem;
                    opacity: 1;
                }
                100% {
                    left: calc(50% + 0.15rem);
                    opacity: 1;
                    width: 0.6rem;
                }
            }
            @keyframes animation-label-color--pink {
                50% {
                    left: calc((50% + 1.05rem) + 0.45rem);
                    width: 1.2rem;
                    opacity: 1;
                }
                100% {
                    left: calc(50% + 1.05rem);
                    opacity: 1;
                    width: 0.6rem;
                }
            }

    .window__scene {
        display: block;
        position: relative;
        margin: 0 auto;
        width: 100%;
        height: 400px;
    }
    .window__scene__inside {
        display: block;
        position: absolute;
        width: 100%;
        height: 100%;
        top: -1px;
        left: 0;
        overflow: hidden;
    }
    .window__scene__plant,
    .window__scene__google-home,
    .window__scene__sill {
        display: block;
        position: absolute;
    }
    .window__scene__plant,
    .window__scene__google-home {
        bottom: 15px;
    }
        .window__scene__plant__image,
        .window__scene__google-home__image {
            display: block;
        }
    .window__scene__plant {
        left: 36px;
    }
/* ... */

